--- a/deployment/etc/pdt/circus.ini
+++ b/deployment/etc/pdt/circus.ini
@@ -10,6 +10,7 @@ use_sockets = True
 send_hup = True
 stop_signal = QUIT
 debug = True
+working_dir = /usr/lib/pdt
 
 [env:pdt]
 PATH = $PATH:/usr/lib/pdt/bin
