--- a/deployment/etc/init/pdt.conf
+++ b/deployment/etc/init/pdt.conf
@@ -1,3 +1,2 @@
 start on filesystem and net-device-up IFACE=lo
-chdir /usr/lib/pdt
-exec python3 /usr/lib/pdt/bin/circusd /etc/pdt/circus.ini
+exec /usr/bin/pdtd
