--- a/deployment/etc/pdt/circus.ini
+++ b/deployment/etc/pdt/circus.ini
@@ -5,7 +5,7 @@ pubsub_endpoint = tcp://127.0.0.1:5556
 stats_endpoint = tcp://127.0.0.1:5557
 
 [watcher:pdt]
-cmd = uwsgi --threads 20 --master --idle 60 --http 0.0.0.0:8000 --wsgi-file pdt/wsgi.py
+cmd = uwsgi --threads 20 --master --idle 60 --http 0.0.0.0:8000 --wsgi-file pdt/wsgi.py --static-map /static=./static
 use_sockets = True
 send_hup = True
 stop_signal = QUIT
