--- a/config_example.yaml
+++ b/config_example.yaml
@@ -13,3 +13,7 @@ pdt:
         token: some-api-token
     fogbugz:
         token: some-fogbugz-token
+        url: http://fogbugz.example.com
+        ci_project_field_id: cixproject
+    hostname: localhost
+    debug: false
