correctly handle files

--- a/deployment/etc/pdt/circus.ini
+++ b/deployment/etc/pdt/circus.ini
@@ -11,6 +11,23 @@ send_hup = True
 stop_signal = QUIT
 debug = True
 working_dir = /usr/lib/pdt
+uid = pdt
+gid = pdt
+
+stdout_stream.class = TimedRotatingFileStream
+stdout_stream.filename = /var/log/pdt/pdt.log
+stdout_stream.time_format = %%Y-%%m-%%d %%H:%%M:%%S
+stdout_stream.utc = True
+stdout_stream.rotate_when = D
+stdout_stream.rotate_interval = 1
+
+stderr_stream.class = TimedRotatingFileStream
+stderr_stream.filename = /var/log/pdt/pdt_error.log
+stderr_stream.time_format = %%Y-%%m-%%d %%H:%%M:%%S
+stderr_stream.utc = True
+stderr_stream.rotate_when = D
+stderr_stream.rotate_interval = 1
+
 
 [env:pdt]
 PATH = $PATH:/usr/lib/pdt/bin
