--- a/config_example.yaml
+++ b/config_example.yaml
@@ -16,4 +16,4 @@ pdt:
         url: http://fogbugz.example.com
         ci_project_field_id: cixproject
     hostname: localhost
-    debug: false
+    debug: true
