ignore deployment for pytest

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ commands = py.test --junitxml={envlogdir}/junit-{envname}.xml pdt tests
 deps = -r{toxinidir}/requirements-testing.txt
 
 [pytest]
-norecursedirs = build .* .env media static templates
+norecursedirs = build .* .env media static deployment
 addopts = -vl --pep8
 
 pep8maxlinelength = 120
