--- a/deployment/etc/pdt/circus.ini
+++ b/deployment/etc/pdt/circus.ini
@@ -3,9 +3,10 @@ check_delay = 5
 endpoint = tcp://127.0.0.1:5555
 pubsub_endpoint = tcp://127.0.0.1:5556
 stats_endpoint = tcp://127.0.0.1:5557
+logoutput = syslog:///dev/log?pdt
 
 [watcher:pdt]
-cmd = uwsgi --threads 20 --master --idle 60 --http 0.0.0.0:8000 --wsgi-file pdt/wsgi.py --static-map /static=./static
+cmd = uwsgi --threads 20 --master --idle 60 --http 0.0.0.0:8000 --wsgi-file pdt/wsgi.py --static-map /static=./static --logger syslog:pdt
 use_sockets = True
 send_hup = True
 stop_signal = QUIT
