basic test for migration filter

--- a/tox.ini
+++ b/tox.ini
@@ -13,3 +13,6 @@ norecursedirs = build .* .env media static deployment
 addopts = -vl --pep8
 
 pep8maxlinelength = 120
+pep8ignore =
+    pdt/core/migrations/* E501
+DJANGO_SETTINGS_MODULE=pdt.settings
