migration collection tests

--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,9 @@ deps = -r{toxinidir}/requirements-testing.txt
 
 [pytest]
 norecursedirs = build .* .env media static deployment
-addopts = -vl --pep8
+addopts = -vvl --pep8
 
 pep8maxlinelength = 120
 pep8ignore =
     pdt/core/migrations/* E501
-DJANGO_SETTINGS_MODULE=pdt.settings
+DJANGO_SETTINGS_MODULE=pdt.settings_test
