--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ django-settings-context-processor==0.2
 django==1.8b1
 djangorestframework==3.0.5
 markdown==2.6
+psycopg2==2.6
 raven==5.2.0
 yamjam==0.1.7
