add pylama, coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
+sudo: false
 language: python
-python:
-    - 2.7
-# command to install dependencies
-# # command to run tests
-before_install:
-  - sudo apt-get update
-  - make dependencies
-install: true
-script:
-  - make test python_version=
-after_success:
-  - make coveralls
+env:
+  matrix:
+  - TESTENV=py34
+  - TESTENV=coveralls
+install:
+- pip install tox
+script: tox -e $TESTENV
 notifications:
-    email:
-        - opensource-tests@paylogic.com
+  email:
+  - opensource-tests@paylogic.com
