--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,35 @@
 [tox]
+distshare = {homedir}/.tox/distshare
 envlist = py34
 indexserver =
     pypi = https://pypi.python.org/simple
 skipsdist = True
 
 [testenv]
-commands = py.test --junitxml={envlogdir}/junit-{envname}.xml pdt tests
+commands = py.test pdt tests
 deps = -r{toxinidir}/requirements-testing.txt
+
+[testenv:coveralls]
+deps =
+    coveralls
+    -r{toxinidir}/requirements-testing.txt
+commands =
+    py.test --cov=pdt --cov-report=term-missing tests
+    coveralls
 
 [pytest]
 norecursedirs = build .* .env media static deployment
-addopts = -vvl --pep8
-
-pep8maxlinelength = 120
-pep8ignore =
-    pdt/core/migrations/* E501
+addopts = -vvl --pylama
 DJANGO_SETTINGS_MODULE=pdt.settings_test
+
+[pylama]
+format = pep8
+skip = */.tox/*,*/.env/*,pdt/core/migrations/*,*settings*
+linters = pylint,mccabe,pep8,pep257
+ignore = F0401,C0111,E731,D100,W0621,W0108,R0201
+
+[pylama:pep8]
+max_line_length = 120
+
+[pylama:pylint]
+max_line_length = 120
