--- a/requirements-testing.txt
+++ b/requirements-testing.txt
@@ -3,8 +3,10 @@
 django-webtest==1.7.7
 factory_boy==2.4.1
 mock==1.0.1
+pylama==6.3.1
+pylama_pylint==2.0.0
 pytest-cache==1.0
 pytest-cov==1.8.1
 pytest-django==2.8.0
-pytest-pep8==1.0.6
-pytest==2.6.4
+pytest-pep257==0.0.1
+pytest==2.7.0
