--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 
 [pytest]
 norecursedirs = build .* .env media static deployment
-addopts = -vvl --pylama
+addopts = -vvl
 DJANGO_SETTINGS_MODULE=pdt.settings_test
 
 [pylama]
