initial functional testing

--- a/tox.ini
+++ b/tox.ini
@@ -19,14 +19,14 @@ commands =
 
 [pytest]
 norecursedirs = build .* .env media static deployment
-addopts = -vvl
+addopts = -vvl --pylama
 DJANGO_SETTINGS_MODULE=pdt.settings_test
 
 [pylama]
 format = pep8
 skip = */.tox/*,*/.env/*,pdt/core/migrations/*,*settings*
 linters = pylint,mccabe,pep8,pep257
-ignore = F0401,C0111,E731,D100,W0621,W0108,R0201
+ignore = F0401,C0111,E731,D100,W0621,W0108,R0201,W0401,W0614
 
 [pylama:pep8]
 max_line_length = 120
