--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ indexserver =
 skipsdist = True
 
 [testenv]
-commands = py.test pdt tests --junitxml={envlogdir}/junit-{envname}.xml
+commands = py.test pdt tests --junitxml={envlogdir}/junit-{envname}.xml --splinter-webdriver=phantomjs
 deps = -r{toxinidir}/requirements-testing.txt
 
 [testenv:coveralls]
