--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 git+https://github.com/paylogic/fogbugz@python3#egg=fogbugz
 git+https://github.com/paylogic/django-auth-fogbugz.git@django-1.7#egg=django-auth-fogbugz
+django-ace==1.0.2
 django-filter==0.9.2
+django-grappelli==2.6.4
 django-settings-context-processor==0.2
 django==1.8.0
 djangorestframework==3.1.1
