--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django-settings-context-processor==0.2
 django==1.8.0
 djangorestframework==3.1.1
 markdown==2.6
-psycopg2==2.6
+mysqlclient==1.3.6
 pytz==2015.2
 raven==5.2.0
 yamjam==0.1.7
