--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 git+https://github.com/paylogic/fogbugz@python3#egg=fogbugz
-git+https://github.com/paylogic/django-auth-fogbugz.git@django-1.7#egg=django-auth-fogbugz
+django-auth-fogbugz==1.2.0
 django-ace==1.0.2
 django-filter==0.9.2
 django-grappelli==2.6.4
