add extra index url

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ skipsdist = True
 [testenv]
 commands = py.test pdt tests --junitxml={envlogdir}/junit-{envname}.xml --splinter-webdriver=phantomjs
 deps = -r{toxinidir}/requirements-testing.txt
+install_command = pip install --pre --extra-index-url={env:extra_index_url} {opts} {packages}
 
 [testenv:coveralls]
 deps =
