--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ DJANGO_SETTINGS_MODULE=pdt.settings_test
 format = pep8
 skip = */.tox/*,*/.env/*,pdt/core/migrations/*,*settings*
 linters = pylint,mccabe,pep8,pep257
-ignore = F0401,C0111,E731,D100,W0621,W0108,R0201,W0401,W0614
+ignore = F0401,C0111,E731,D100,W0621,W0108,R0201,W0401,W0614,I0011
 
 [pylama:pep8]
 max_line_length = 120
