--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 git+https://github.com/paylogic/fogbugz@python3#egg=fogbugz
-django-auth-fogbugz==1.2.0
+git+https://github.com/bubenkoff/django-auth-fogbugz.git@patch-1#egg=django-auth-fogbugz
+# django-auth-fogbugz==1.2.0
 django-ace==1.0.2
 django-filter==0.9.2
 django-grappelli==2.6.4
