--- a/deployment/etc/pdt/circus.ini
+++ b/deployment/etc/pdt/circus.ini
@@ -10,7 +10,7 @@ cmd = uwsgi --threads 20 --master --idle 60 --http 0.0.0.0:8000 --wsgi-file pdt/
 use_sockets = True
 send_hup = True
 stop_signal = QUIT
-debug = True
+debug = False
 working_dir = /usr/lib/pdt
 uid = pdt
 gid = pdt
@@ -29,6 +29,51 @@ stderr_stream.utc = True
 stderr_stream.rotate_when = D
 stderr_stream.rotate_interval = 1
 
+[watcher:pdt-celery-worker]
+cmd = celery -A pdt worker
+send_hup = True
+stop_signal = QUIT
+debug = False
+working_dir = /usr/lib/pdt
+uid = pdt
+gid = pdt
+
+stdout_stream.class = TimedRotatingFileStream
+stdout_stream.filename = /var/log/pdt/pdt-worker.log
+stdout_stream.time_format = %%Y-%%m-%%d %%H:%%M:%%S
+stdout_stream.utc = True
+stdout_stream.rotate_when = D
+stdout_stream.rotate_interval = 1
+
+stderr_stream.class = TimedRotatingFileStream
+stderr_stream.filename = /var/log/pdt/pdt-worker_error.log
+stderr_stream.time_format = %%Y-%%m-%%d %%H:%%M:%%S
+stderr_stream.utc = True
+stderr_stream.rotate_when = D
+stderr_stream.rotate_interval = 1
+
+[watcher:pdt-celery-beat]
+cmd = celery -A pdt beat
+send_hup = True
+stop_signal = QUIT
+debug = False
+working_dir = /usr/lib/pdt
+uid = pdt
+gid = pdt
+
+stdout_stream.class = TimedRotatingFileStream
+stdout_stream.filename = /var/log/pdt/pdt-beat.log
+stdout_stream.time_format = %%Y-%%m-%%d %%H:%%M:%%S
+stdout_stream.utc = True
+stdout_stream.rotate_when = D
+stdout_stream.rotate_interval = 1
+
+stderr_stream.class = TimedRotatingFileStream
+stderr_stream.filename = /var/log/pdt/pdt-beat_error.log
+stderr_stream.time_format = %%Y-%%m-%%d %%H:%%M:%%S
+stderr_stream.utc = True
+stderr_stream.rotate_when = D
+stderr_stream.rotate_interval = 1
 
 [env:pdt]
 PATH = $PATH:/usr/lib/pdt/bin
