--- a/config_build.yaml
+++ b/config_build.yaml
@@ -17,3 +17,7 @@ pdt:
         ci_project_field_id: cixproject
     hostname: localhost
     debug: false
+    celery:
+        broker_url: redis://localhost:6379/0
+        result_backend: redis://localhost:6379/0
+        scheduler_url: redis://localhost:6379/1
