--- a/deployment/etc/pdt/circus.ini
+++ b/deployment/etc/pdt/circus.ini
@@ -77,3 +77,9 @@ stderr_stream.rotate_interval = 1
 
 [env:pdt]
 PATH = $PATH:/usr/lib/pdt/bin
+
+[env:pdt-celery-worker]
+PATH = $PATH:/usr/lib/pdt/bin
+
+[env:pdt-celery-beat]
+PATH = $PATH:/usr/lib/pdt/bin
