--- a/deployment/etc/pdt/circus.ini
+++ b/deployment/etc/pdt/circus.ini
@@ -30,7 +30,7 @@ stderr_stream.rotate_when = D
 stderr_stream.rotate_interval = 1
 
 [watcher:pdt-celery-worker]
-cmd = celery -A pdt worker
+cmd = -dt-celery worker
 send_hup = True
 stop_signal = QUIT
 debug = False
@@ -53,7 +53,7 @@ stderr_stream.rotate_when = D
 stderr_stream.rotate_interval = 1
 
 [watcher:pdt-celery-beat]
-cmd = celery -A pdt beat
+cmd = pdt-celery beat
 send_hup = True
 stop_signal = QUIT
 debug = False
