move circus config under pdt lib

--- a/deployment/usr/lib/pdt/etc/circus.ini
+++ b/deployment/usr/lib/pdt/etc/circus.ini
@@ -31,8 +31,9 @@ stderr_stream.rotate_interval = 1
 
 [watcher:pdt-celery-worker]
 cmd = pdt-celery worker
-send_hup = True
+singleton = True
 stop_signal = QUIT
+stop_children = True
 debug = False
 working_dir = /usr/lib/pdt
 uid = pdt
@@ -54,8 +55,9 @@ stderr_stream.rotate_interval = 1
 
 [watcher:pdt-celery-beat]
 cmd = pdt-celery beat
-send_hup = True
+singleton = True
 stop_signal = QUIT
+stop_children = True
 debug = False
 working_dir = /usr/lib/pdt
 uid = pdt
