fix nginx config

--- a/deployment/usr/lib/pdt/etc/circus.ini
+++ b/deployment/usr/lib/pdt/etc/circus.ini
@@ -6,7 +6,7 @@ stats_endpoint = tcp://127.0.0.1:5557
 logoutput = syslog:///dev/log?pdt
 
 [watcher:pdt]
-cmd = uwsgi --threads 20 --master --idle 60 --http 0.0.0.0:8000 --wsgi-file pdt/wsgi.py --static-map /static=./static --logger syslog:pdt
+cmd = uwsgi --threads 20 --master --idle 60 --socket :8000 --wsgi-file pdt/wsgi.py --static-map /static=./static --logger syslog:pdt
 use_sockets = True
 send_hup = True
 stop_signal = QUIT
