implemented migration reviewed notification

--- a/config_build.yaml
+++ b/config_build.yaml
@@ -15,6 +15,7 @@ pdt:
         token: some-fogbugz-token
         url: http://fogbugz.example.com
         ci_project_field_id: cixproject
+        migration_url_field_id: dbxmigration
     hostname: localhost
     debug: false
     celery:
