--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-filter==0.9.2
 django-grappelli==2.6.4
 django-settings-context-processor==0.2
 django==1.8.0
+django-model-utils==2.2
 djangorestframework==3.1.1
 markdown==2.6
 mysqlclient==1.3.6
