--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 git+https://github.com/paylogic/fogbugz@python3#egg=fogbugz
 git+https://github.com/bubenkoff/django-auth-fogbugz.git@patch-1#egg=django-auth-fogbugz
 # django-auth-fogbugz==1.2.0
+celery==3.1.18
+celerybeat-redis==0.0.7
 django-ace==1.0.2
 django-filter==0.9.2
 django-grappelli==2.6.4
+django-model-utils==2.2
 django-settings-context-processor==0.2
 django==1.8.0
-django-model-utils==2.2
 djangorestframework==3.1.1
+jsonfield==1.0.3
 markdown==2.6
 mysqlclient==1.3.6
 pytz==2015.2
 raven==3.6.0
-yamjam==0.1.7
-celery==3.1.18
 redis==2.10.3
-celerybeat-redis==0.0.7
+yamjam==0.1.7
