--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ git+https://github.com/bubenkoff/django-auth-fogbugz.git@patch-1#egg=django-auth
 celery==3.1.18
 celerybeat-redis==0.0.7
 django-ace==1.0.2
+django-adminplus==0.3
 django-filter==0.9.2
 django-grappelli==2.6.4
 django-model-utils==2.2
+django-object-actions==0.5.1
 django-settings-context-processor==0.2
 django==1.8.0
 djangorestframework==3.1.1
