--- a/config_build.yaml
+++ b/config_build.yaml
@@ -22,3 +22,8 @@ pdt:
         broker_url: redis://localhost:6379/0
         result_backend: redis://localhost:6379/0
         scheduler_url: redis://localhost:6379/1
+    cache:
+        redis:
+            host: localhost
+            port: 6379
+            db: 3
