--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 git+https://github.com/paylogic/fogbugz@python3#egg=fogbugz
-git+https://github.com/bubenkoff/django-auth-fogbugz.git@patch-1#egg=django-auth-fogbugz
+git+https://github.com/bubenkoff/django-auth-fogbugz@patch-1#egg=django-auth-fogbugz
+git+https://github.com/paylogic/django-constance@django-1.8#egg=django-constance[database]
 # django-auth-fogbugz==1.2.0
 celery==3.1.18
 celery_once==0.1.2
@@ -10,10 +11,12 @@ django-filter==0.9.2
 django-grappelli==2.6.4
 django-model-utils==2.2
 django-object-actions==0.5.1
+django-redis-cache==0.13.1
 django-settings-context-processor==0.2
 django-taggit==0.14.0
 django==1.8.0
 djangorestframework==3.1.1
+hiredis==0.2.0
 jsonfield==1.0.3
 markdown==2.6
 mysqlclient==1.3.6
