--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 git+https://github.com/paylogic/fogbugz@python3#egg=fogbugz
 git+https://github.com/bubenkoff/django-auth-fogbugz@patch-1#egg=django-auth-fogbugz
 git+https://github.com/paylogic/django-constance@django-1.8#egg=django-constance[database]
+git+https://github.com/paylogic/django-embedded-media.git@python3#egg=django-embedded-media
 # django-auth-fogbugz==1.2.0
 ansi2html==1.1.0
 celery==3.1.18
@@ -9,7 +10,6 @@ celerybeat-redis==0.0.7
 colorama==0.3.3
 django-ace==1.0.2
 django-adminplus==0.3
-django-embedded-media==0.1.0
 django-filter==0.9.2
 django-grappelli==2.6.4
 django-model-utils==2.2
