--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ django-redis-cache==0.13.1
 django-settings-context-processor==0.2
 django-taggit==0.14.0
 django==1.8.0
-djangorestframework==3.1.1
+djangorestframework==3.1.2
 hiredis==0.2.0
 jsonfield==1.0.3
 markdown==2.6
@@ -26,5 +26,5 @@ mysqlclient==1.3.6
 pytz==2015.2
 raven==3.6.0
 redis==2.10.3
+toposort==1.4
 yamjam==0.1.7
-
