correct coverage tox target

--- a/tox.ini
+++ b/tox.ini
@@ -8,15 +8,17 @@ skipsdist = True
 [testenv]
 commands = py.test pdt tests --junitxml={envlogdir}/junit-{envname}.xml --splinter-webdriver=phantomjs
 deps = -r{toxinidir}/requirements-testing.txt
-install_command = pip install --pre --extra-index-url={env:extra_index_url} {opts} {packages}
+install_command = pip install --pre --extra-index-url={env:extra_index_url:http://pypi.python.org/simple} {opts} {packages}
 
 [testenv:coveralls]
+basepython = python3.4
 deps =
     coveralls
     -r{toxinidir}/requirements-testing.txt
 commands =
     py.test --cov=pdt --cov-report=term-missing tests
     coveralls
+passenv = DISPLAY COVERALLS_REPO_TOKEN
 
 [pytest]
 norecursedirs = build .* .env media static deployment
