skip toolbar for tests

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ indexserver =
 skipsdist = True
 
 [testenv]
+setenv = TESTING=True
 commands = py.test pdt tests --junitxml={envlogdir}/junit-{envname}.xml --splinter-webdriver=phantomjs
 deps = -r{toxinidir}/requirements-testing.txt
 install_command = pip install --pre --extra-index-url={env:extra_index_url:http://pypi.python.org/simple} {opts} {packages}
