--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-object-actions==0.5.1
 django-redis-cache==0.13.1
 django-settings-context-processor==0.2
 django-taggit==0.14.0
+django-taggit-helpers==0.1.2
 django==1.8.3
 djangorestframework==3.1.2
 hiredis==0.2.0
