--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,11 @@ django-model-utils==2.2
 django-object-actions==0.5.1
 django-redis-cache==0.13.1
 django-settings-context-processor==0.2
-django-taggit==0.14.0
 django-taggit-helpers==0.1.2
+django-taggit==0.14.0
 django==1.8.3
 djangorestframework==3.1.2
+djano-post_office==2.0.3
 hiredis==0.2.0
 jsonfield==1.0.3
 markdown==2.6
