--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ passenv = DISPLAY COVERALLS_REPO_TOKEN
 
 [pytest]
 norecursedirs = build .* .env media static deployment
-addopts = -vvl --pylama --nomigrations
+addopts = -vvl --pylama
 DJANGO_SETTINGS_MODULE=pdt.settings_test
 
 [pylama]
