--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,14 @@ django-filter==0.9.2
 django-grappelli==2.6.4
 django-model-utils==2.2
 django-object-actions==0.5.1
+django-post_office==2.0.3
 django-redis-cache==0.13.1
+django-reversion==1.9.3
 django-settings-context-processor==0.2
 django-taggit-helpers==0.1.2
 django-taggit==0.14.0
 django==1.8.3
 djangorestframework==3.1.2
-django-post_office==2.0.3
 hiredis==0.2.0
 jsonfield==1.0.3
 markdown==2.6
