--- a/config_build.yaml
+++ b/config_build.yaml
@@ -8,7 +8,7 @@ pdt:
         host:
         port:
     raven:
-        dsn: some-raven-dsn
+        dsn: # some-raven-dsn
     api:
         token: some-api-token
     fogbugz:
