--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 sudo: false
+addons:
+  firefox: "37.0.1"
+before_install:
+  - "export DISPLAY=:99.0"
 services:
   - elasticsearch
   - redis-server
