add browser addon

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
     coveralls
     -r{toxinidir}/requirements-testing.txt
 commands =
-    py.test --cov=pdt --cov-report=term-missing tests
+    py.test --cov=pdt --cov-report=term-missing  --splinter-webdriver=phantomjs tests
     coveralls
 passenv = DISPLAY COVERALLS_REPO_TOKEN
 
