--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
 commands =
     py.test --cov=pdt --cov-report=term-missing  --splinter-webdriver=phantomjs tests
     coveralls
-passenv = DISPLAY COVERALLS_REPO_TOKEN
+passenv = COVERALLS_REPO_TOKEN TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 
 [pytest]
 norecursedirs = build .* .env media static deployment
